--- a/SkEditorPlus/Windows/PublishWindow.xaml
+++ b/SkEditorPlus/Windows/PublishWindow.xaml
@@ -43,7 +43,7 @@
 
             <hc:TextBox Grid.Column="0" x:Name="urlTextBox" Margin="0,0,5,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" TextWrapping="Wrap" Text="" hc:InfoElement.Placeholder="{DynamicResource PublishResultUrlPlaceholder}" IsReadOnlyCaretVisible="True"/>
 
-            <Button Grid.Column="1" Height="28" Width="28" Padding="0" HorizontalAlignment="Right" VerticalAlignment="Top" Content="&#xe8c8;" FontFamily="Segoe Fluent Icons" Click="CopyClick"/>
+            <Button Grid.Column="1" Height="28" Width="28" Padding="0" HorizontalAlignment="Right" VerticalAlignment="Top" Content="&#xe8c8;" FontFamily="pack://application:,,,/Fonts/#Segoe Fluent Icons" Click="CopyClick"/>
         </Grid>
     </Grid>
 </hc:Window>
