--- a/SkEditorPlus/Windows/NewOptionsWindow.xaml
+++ b/SkEditorPlus/Windows/NewOptionsWindow.xaml
@@ -45,7 +45,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsLanguage}" />
                             <hc:ComboBox x:Name="languageComboBox"
@@ -64,7 +64,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsAutoSave}" />
                             <CheckBox x:Name="autosaveCheckbox"
@@ -78,7 +78,7 @@
                            Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                VerticalAlignment="Center"
-                               FontFamily="Cascadia Mono"
+                               FontFamily="/Fonts/#Cascadia Mono"
                                FontSize="16"
                                Text="{DynamicResource OptionsCheckForUpdates}" />
                             <CheckBox x:Name="checkForUpdatesCheckbox"
@@ -92,7 +92,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsWrapping}" />
                             <CheckBox x:Name="wrappingCheckbox"
@@ -106,7 +106,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsAutoSecondChar}" />
                             <CheckBox x:Name="autoSecondCharacterCheckbox"
@@ -120,7 +120,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsAutoNewLine}" />
                             <hc:Badge HorizontalAlignment="Left"
@@ -140,7 +140,7 @@
                                    Margin="0,0,0,15">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsDocsLink}" />
                             <hc:TextBox x:Name="docsLinkTextBox"
@@ -155,7 +155,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource SyntaxHighlighting}" />
                             <Button x:Name="updateSyntaxButton"
@@ -171,7 +171,7 @@
                                        Margin="0,0,15,0"
                                        HorizontalAlignment="Left"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="Version: version" />
                         </DockPanel>
@@ -196,7 +196,7 @@
                            Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                VerticalAlignment="Center"
-                               FontFamily="Cascadia Mono"
+                               FontFamily="/Fonts/#Cascadia Mono"
                                FontSize="16"
                                Text="{DynamicResource SyntaxHighlighting}" />
                             <hc:ComboBox x:Name="syntaxComboBox"
@@ -211,7 +211,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsFont}" />
                             <Button x:Name="fontPickerButton"
@@ -225,7 +225,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsMica}" />
                             <hc:Badge HorizontalAlignment="Left"
@@ -245,7 +245,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsTransparency}" />
                             <Slider x:Name="editorTransparency"
@@ -274,7 +274,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsDiscordRPC}" />
                             <CheckBox x:Name="discordRPCCheckbox"
@@ -307,7 +307,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="14" TextWrapping="Wrap" Foreground="{StaticResource DarkWarningBrush}"
                                        Text="{DynamicResource OptionsExperimentsWarning}" />
                         </DockPanel>
@@ -317,7 +317,7 @@
                                    Margin="0,0,0,5" ToolTip="Adds a sidebar with Project and Structure menu.">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="Projects and Structure:" />
                             <CheckBox x:Name="projectsExperimentCheckbox"
@@ -332,7 +332,7 @@
                                    Margin="0,0,0,5" ToolTip="Enables code completion prototype. It isn't very useful right now.">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="Code completion prototype:" />
                             <CheckBox x:Name="completionExperimentCheckbox"
@@ -347,7 +347,7 @@
                                    Margin="0,0,0,5" ToolTip="Adds a bottom bar with informations about the code.">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="Bottom bar:" />
                             <CheckBox x:Name="bottomBarExperimentCheckbox"
@@ -362,7 +362,7 @@
                                    Margin="0,0,0,5" ToolTip="Adds the Analyzer, that can check if your scripts have errors. Due to skUnity Parser's API changes, it's currently not available.">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="Analyzer:" />
                             <CheckBox x:Name="analyzerExperimentCheckbox"
@@ -377,7 +377,7 @@
                                    Margin="0,0,0,5" ToolTip="When you run SkEditor+, it checks the SkEditor+ website for any alerts that might contain important announcements or warnings.">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="Alerts:" />
                             <CheckBox x:Name="alertsExperimentCheckbox"
@@ -406,7 +406,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Center"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsOpenAddonsFolder}" />
                             <Button x:Name="openAddonsFolderButton"
@@ -421,7 +421,7 @@
                                    Margin="0,0,0,5">
                             <TextBlock Margin="0,0,15,0"
                                        VerticalAlignment="Top"
-                                       FontFamily="Cascadia Mono"
+                                       FontFamily="/Fonts/#Cascadia Mono"
                                        FontSize="16"
                                        Text="{DynamicResource OptionsAddonsList}" />
                         </DockPanel>
@@ -442,7 +442,7 @@
                                 <TextBlock Margin="0,5,15,0"
                                            x:Name="addonNameText"
                                            VerticalAlignment="Top"
-                                           FontFamily="Cascadia Mono"
+                                           FontFamily="/Fonts/#Cascadia Mono"
                                            FontSize="16"
                                            TextWrapping="Wrap"
                                            Text="" />
@@ -452,7 +452,7 @@
                                 <TextBlock Margin="0,5,15,0"
                                            x:Name="addonAuthorText"
                                            VerticalAlignment="Top"
-                                           FontFamily="Cascadia Mono"
+                                           FontFamily="/Fonts/#Cascadia Mono"
                                            FontSize="16"
                                            TextWrapping="Wrap"
                                            Text="" />
@@ -462,7 +462,7 @@
                                 <TextBlock Margin="0,5,15,0"
                                            x:Name="addonVersionText"
                                            VerticalAlignment="Top"
-                                           FontFamily="Cascadia Mono"
+                                           FontFamily="/Fonts/#Cascadia Mono"
                                            FontSize="16"
                                            TextWrapping="Wrap"
                                            Text="" />
@@ -472,7 +472,7 @@
                                 <TextBlock Margin="0,5,15,0"
                                         x:Name="addonDescriptionText"
                                         VerticalAlignment="Top"
-                                        FontFamily="Cascadia Mono"
+                                        FontFamily="/Fonts/#Cascadia Mono"
                                         FontSize="16"
                                         Text=""
                                         TextWrapping="Wrap" />
@@ -483,7 +483,7 @@
                                 <TextBlock Margin="0,5,15,0"
                                     x:Name="addonToggleText"
                                     VerticalAlignment="Top"
-                                    FontFamily="Cascadia Mono"
+                                    FontFamily="/Fonts/#Cascadia Mono"
                                     FontSize="16"
                                     Text=""
                                     TextWrapping="Wrap" />
@@ -499,15 +499,14 @@
                 </Grid>
             </TabItem>
 
-
-            <TabItem x:Name="FTPTabItem"
+            <!--<TabItem x:Name="FTPTabItem"
                      Background="Transparent"
                      Header="{DynamicResource OptionsMenuFTP}"
                      IsEnabled="False">
                 <Grid Margin="5"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Top" />
-            </TabItem>
+            </TabItem>-->
         </TabControl>
     </Grid>
 </hc:Window>
