--- a/SkEditorPlus/Languages/Spanish.xaml
+++ b/SkEditorPlus/Languages/Spanish.xaml
@@ -96,6 +96,9 @@
     <system:String x:Key="GUIGenUseSkriptGuiAddon">Usa skript-gui</system:String>
     <system:String x:Key="GUIGenEdit">Editar</system:String>
     <system:String x:Key="GUIGenRemove">Eliminar</system:String>
+    <system:String x:Key="GUIGenCopy">Copiar</system:String>
+    <system:String x:Key="GUIGenPaste">Pegar</system:String>
+
 
     <system:String x:Key="ItemSelectorSearch">Buscar...</system:String>
     <system:String x:Key="ItemSelectorItemName">Nombre del objeto</system:String>
